--- a/backend/note-website-backend/package.json
+++ b/backend/note-website-backend/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.14.2",
     "cloudinary": "^1.41.3",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^7.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.15.6",
